--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
   "name": "@battis/jsx-lib",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "Support libraries for JSX apps",
+  "author": "Seth Battis <seth@battis.net>",
+  "license": "GPL-3.0",
   "main": "dist/index.js",
-  "types": "dist.index.d.ts",
-  "scripts": {
-    "build": "tsc --project tsconfig.dist.json",
-    "test": "jest --config=jest.config.js"
-  },
+  "types": "dist/index.d.ts",
+  "homepage": "https://github.com/battis/jsx-lib#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/battis/jsx-lib.git"
   },
-  "author": "Seth Battis <seth@battis.net>",
-  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/battis/jsx-lib/issues"
   },
-  "homepage": "https://github.com/battis/jsx-lib#readme",
-  "devDependencies": {
-    "@battis/identifier": "battis/identifier",
-    "@tsconfig/recommended": "^1.0.1",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.5",
-    "jest": "^27.4.5",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4"
+  "scripts": {
+    "build": "webpack",
+    "test": "jest --config=jest.config.js"
   },
   "dependencies": {
     "@battis/typescript-tricks": "battis/typescript-tricks"
+  },
+  "devDependencies": {
+    "@tsconfig/recommended": "^1.0.1",
+    "@types/jest": "^27.4.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "jest": "^27.4.5",
+    "ts-jest": "^27.1.2",
+    "ts-loader": "^9.2.8",
+    "typescript": "^4.6.3",
+    "uuid": "^8.3.2",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   }
 }
